<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>cn.aberic</groupId>
    <artifactId>tangduo</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>tangduo</name>
    <url>http://www.aberic.cn</url>
    <modules>
        <module>index</module>
        <module>common</module>
        <module>db</module>
        <module>search</module>
        <module>sdk4j8</module>
        <module>sdk4j21</module>
        <module>client</module>
    </modules>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <maven-javadoc-plugin.version>3.0.0</maven-javadoc-plugin.version> <!-- 3.12.0 -->
        <maven-jar-plugin.version>3.4.2</maven-jar-plugin.version>
        <maven-compiler-plugin.version>3.15.0</maven-compiler-plugin.version>
        <maven-shade-plugin.version>3.6.0</maven-shade-plugin.version>
        <maven-assembly-plugin.version>3.7.1</maven-assembly-plugin.version>
        <spring-boot.version>4.0.5</spring-boot.version>
        <lombok.version>1.18.42</lombok.version>
        <logback.version>1.5.25</logback.version>
        <gson.version>2.11.0</gson.version>
        <commons-lang3.version>3.19.0</commons-lang3.version>
        <ikanalyzer.version>2012_u6</ikanalyzer.version>
        <hanlp.version>portable-1.8.6</hanlp.version>
        <junit.version>4.13.2</junit.version>
        <jupiter.version>6.0.2</jupiter.version>
        <jackson-databind.version>2.21.2</jackson-databind.version>
        <jackson-annotations.version>2.21</jackson-annotations.version>
        <jackson.version>3.1.2</jackson.version>
        <tools.jackson.version>3.1.1</tools.jackson.version>
        <okhttp.version>5.3.2</okhttp.version>
        <slf4j.version>2.0.17</slf4j.version>
        <asm.version>9.9.1</asm.version>

        <common.version>1.0-SNAPSHOT</common.version>
    </properties>

    <dependencies>
        <!-- logback + lombok 开始 -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
        </dependency>
        <!-- logback + lombok 结束 -->
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>
            <dependency>
                <groupId>cn.aberic.tangduo</groupId>
                <artifactId>common</artifactId>
                <version>${common.version}</version>
            </dependency>
            <dependency>
                <groupId>cn.aberic.tangduo</groupId>
                <artifactId>index</artifactId>
                <version>${common.version}</version>
            </dependency>
            <dependency>
                <groupId>cn.aberic.tangduo</groupId>
                <artifactId>db</artifactId>
                <version>${common.version}</version>
            </dependency>
            <dependency>
                <groupId>cn.aberic.tangduo</groupId>
                <artifactId>sdk4j8</artifactId>
                <version>${common.version}</version>
            </dependency>
            <dependency>
                <groupId>cn.aberic.tangduo</groupId>
                <artifactId>sdk4j21</artifactId>
                <version>${common.version}</version>
            </dependency>
            <dependency> <!-- Spring Boot 启动核心（包含 @SpringBootApplication） -->
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter</artifactId>
                <version>${spring-boot.version}</version>
            </dependency>
            <dependency> <!--web-->
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-web</artifactId>
                <version>${spring-boot.version}</version>
            </dependency>
            <dependency> <!-- Actuator 监控 -->
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-actuator</artifactId>
                <version>${spring-boot.version}</version>
            </dependency>
            <dependency> <!-- AOP 耗时统计 -->
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-aspectj</artifactId>
                <version>${spring-boot.version}</version>
            </dependency>
            <dependency> <!-- Actuator 安全认证（生产必加） -->
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-security</artifactId>
                <version>${spring-boot.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.code.gson</groupId>
                <artifactId>gson</artifactId>
                <version>${gson.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>${logback.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang3.version}</version>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${jupiter.version}</version>
            </dependency>
            <dependency><!-- IK 分词 -->
                <groupId>com.janeluo</groupId>
                <artifactId>ikanalyzer</artifactId>
                <version>${ikanalyzer.version}</version>
            </dependency>
            <dependency><!-- HanLP 标准版 → 本地模型，不联网、速度快 -->
                <groupId>com.hankcs</groupId>
                <artifactId>hanlp</artifactId>
                <version>${hanlp.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-annotations</artifactId>
                <version>${jackson-annotations.version}</version>
            </dependency>
            <dependency>
                <groupId>tools.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>tools.jackson.core</groupId>
                <artifactId>jackson-core</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.squareup.okhttp3</groupId>
                <artifactId>okhttp</artifactId>
                <version>${okhttp.version}</version>
            </dependency>
            <!--log-->
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <!-- ASM字节码框架 -->
            <dependency>
                <groupId>org.ow2.asm</groupId>
                <artifactId>asm</artifactId>
                <version>${asm.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>${spring-boot.version}</version>
                <configuration>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${maven-javadoc-plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <!-- 关键：保留方法参数名 -->
                    <parameters>true</parameters>
                    <source>21</source> <!-- 你的JDK版本 -->
                    <target>21</target>
                    <encoding>UTF-8</encoding>
                    <!-- 启用注解处理，Lombok必须 -->
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
            <resource>
                <directory>lib</directory>
                <targetPath>BOOT-INF/lib/</targetPath>
                <includes>
                    <include>*.jar</include>
                </includes>
            </resource>
        </resources>
    </build>

</project>
